# FIREFate

./: 02_1_predisposed_plotting.ipynb  02_grn_inference.ipynb  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ESCAPE/: ESCAPE.R
SLIDE/: Plot_LFs.R  Plot_SLIDECV_boxplot.R  SLIDE.yaml  SLIDERun.sh
SLIDE/Preprocessing/: Step1_Preprocessing.R  Step2_Concat.R
examples/: .gitignore  basic_usage.py
firefate/: __init__.py
firefate/analysis/: __init__.py
firefate/data_processing/: __init__.py
firefate/utils/: __init__.py
firefate/visualization/: __init__.py
motif_analysis/: motif_analysis.ipynb  motif_analysis_utility.py
multiome_dynamic_regulation/bash_scripts/analysis/: episodic_enrichment.sbatch
multiome_dynamic_regulation/bash_scripts/chromatin/: 1_window_bam_peaks.sbatch  2_chromatin_footprinting.sbatch  3_chromatin_scan_motif.sbatch  4_chromatin_linking.sbatch  base_grn_filter.out  subset_base_grn.sbatch
multiome_dynamic_regulation/bash_scripts/network/: 1_network_reconstruct.sbatch  2_network_postprocess.sbatch  3_network_to_file.sbatch  network_to_file.out
multiome_dynamic_regulation/bash_scripts/preproc/: 1_sort_bam.sbatch  1b_traj_windows_parallel.sbatch  2_traj_subset.sbatch  3_slice_gene_by_cell.sbatch  4_qc_sliced_matrix.sbatch  subset_barcodes_static.sbatch
multiome_dynamic_regulation/py_scripts/analysis/: LF_global_dynamics.ipynb  LF_local_dynamics.ipynb  config.py  episode_plots.py  episodic_dynamics.py  (+4 more)
old_notebooks/: 02_grn_inference_old.ipynb  03_1_cicero_lf_enrich.ipynb  03_cicero_lf_enrich.ipynb  03_combinatorial_control copy.ipynb  03_lf_enrich.ipynb  04_1_CESeek.ipynb  04_ceseek_cicero_cc copy.ipynb  04_motif.ipynb  CEseek_class.py  ce_seek.py
swapnil_code/: 01_sc_preproc.ipynb  03_1_cicero.ipynb  03_lf_enrich.ipynb  05_dynamic_grn.ipynb
swapnil_code/motif_analysis/: __init__.py  ce_seek.py  motif_processor.py
swapnil_code/old_notebooks/: 03_combinatorial_control_old.ipynb  04_2_ceseek.ipynb  05_STREAM_scATAC-seq_peaks.ipynb
tests/: __init__.py  test_firefate.py
zarifeh_code/: README.md
zarifeh_code/SLIDE/: Crossprediction.R  SLIDERun.R
zarifeh_code/TF_Dynamic_Activity/: Lasso_DEG_benchmark.ipynb  Step1_Cell_Fate_Prediction.R  Step2_Cell_Fate_Prediction.ipynb
(+14 files in other folders)
