[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firefate"
version = "0.1.0"
description = "Functional and Interpretable Regulatory Encoding of Fate determination"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Akanksha Sachan", email = "akanksha@example.com"}
]
maintainers = [
    {name = "Akanksha Sachan", email = "akanksha@example.com"}
]
keywords = [
    "bioinformatics",
    "regulatory-analysis",
    "fate-determination",
    "gene-expression",
    "computational-biology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sachha-naksha/FIREFate-"
Repository = "https://github.com/sachha-naksha/FIREFate-"
Documentation = "https://github.com/sachha-naksha/FIREFate-#readme"
"Bug Tracker" = "https://github.com/sachha-naksha/FIREFate-/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["firefate*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=firefate --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
